--- a/index.html
+++ b/index.html
@@ -7,11 +7,83 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>BRIDGING THE GAP</h1>
-    <h2>THE PHILIPPINE DIGITAL DIVIDE</h2>
+  <nav>
+    <div class="nav-content">
+      <h1 class="digital">The Digital Divide in the Philippines: Impacts on Education and Employment </h1>
+    </div>
+  </nav>
 
-    <!-- Top Info Section -->
+  <!-- First Slide -->
+  <section id="First-sl">
+    <div>
+      <h1>What is Digital Divide?</h1>
+      <p>The digital divide in the Philippines refers to the unequal access to digital technologies and internet connectivity among its people. This gap affects education by limiting online learning opportunities and employment by reducing competitiveness in a technology-driven job market.</p>
+
+    </div>
+  </section>
+
+   <!-- Second Slide -->
+  <section id="Second-sl">
+    <div>
+      <h1>Current Philippine Context</h1>
+      <p>•"Konektadong Pinoy" law → opens telecom market. <br>
+•Despite progress, disparities remain in access, speed, and digital literacy. <br>
+•Fact: 16.2% of Filipinos still offline in 2025. <br>
+•Fact: Digital economy contributed 8.5% of GDP in 2024.</p> <br> <br>
+
+<h1>Impact on Education</h1>
+      <p>
+•Urban: Students enjoy faster internet, access to e-learning platforms, digital libraries. <br>
+•Rural: Many struggle with weak signals, fewer devices, poor digital resources. <br>
+•Effect → Learning gap widens between rich/urban and poor/rural students.</p>
+    </div>
+  </section>
+
+  <!-- Third Slide -->
+  <section id="Third-sl">
+    <div>
+      <h1>Impact on Employment</h1>
+      <p>•Urban: More online jobs (BPO, freelancing, digital businesses). <br>
+•Rural: Missed opportunities due to slow/unstable connections. <br>
+•Digital skills gap makes it harder for rural workers to compete.</p>
+
+
+<h1>Geography Factor</h1>
+      <p>
+•Philippines = archipelago of 7,600+ islands. <br>
+•Geography makes building internet infrastructure expensive and difficult. <br>
+•Remote islands and mountainous areas remain the least connected.</p>
+
+    </div>
+  </section>
+
+    <!-- Fourth Slide -->
+  <section id="Fourth-sl">
+    <div>
+      <h1>Solutions</h1>
+      <p>•Konektadong Pinoy Law → encourage competition among telecoms. <br>
+•Expand fiber optic and satellite internet. <br>
+•Provide digital literacy training for students and workers.<br>
+•Public–private partnerships to connect remote areas.
+</p>
+
+
+<h1>Geography Factor</h1>
+      <p>
+•Philippines = archipelago of 7,600+ islands. <br>
+•Geography makes building internet infrastructure expensive and difficult. <br>
+•Remote islands and mountainous areas remain the least connected.</p>
+
+    </div>
+  </section>
+
+
+  <!-- Infographics -->
+  <div class="container">
+   <div class="title"> <h1>BRIDGING THE GAP</h1>
+    <h2>THE PHILIPPINE DIGITAL DIVIDE </h2>
+    </div>
+
     <div class="top-info">
       <div class="card">
         <h3>INTERNET PENETRATION RATES</h3>
@@ -25,7 +97,6 @@
       </div>
     </div>
 
-    <!-- Map Section -->
     <div class="map-container">
       <img src="./images/php-removebg-preview.png" alt="Philippines Map" />
       <div class="label luzon">
@@ -40,7 +111,6 @@
       </div>
     </div>
 
-    <!-- Socio-Economic Consequences -->
     <div class="socio">
       <h3>SOCIO-ECONOMIC CONSEQUENCES</h3>
       <div class="socio-items">
@@ -51,5 +121,21 @@
       </div>
     </div>
   </div>
+
+   <section id="Last-sl">
+    <div>
+      <h1>Conclusion</h1>
+      <p>The digital divide is more than a tech issue → it’s about equal opportunities. <br>
+•Bridging the gap ensures: <br>
+•Better education for all. <br>
+•Equal access to jobs. <br>
+•Stronger economy.</p>
+    </div>
+  </section>
+
+  <footer>
+  <p class="footer">© All Rights Reserved | Digital Divide Group 3 | 2025</p>
+</footer>
+
 </body>
 </html>
